Upload data 2021년 9월 24일 금요일 19시 36분 11초 KST

--- a/code/Makefile
+++ b/code/Makefile
@@ -1,13 +1,19 @@
 
 NAME = push_swap
 
-SRCS =  main.c
+CHECK = $(wildcard push_swap)
+
+SRCS =  main.c\
+		functions/atoi.c\
+		functions/node_functions.c\
+		functions/itoa.c\
+		functions/check.c\
 
 CC = gcc
 
-FLAGS = -o $(NAME) -g -Wall -Wextra -Werror
+FLAGS = -o $(NAME) -g -ggdb -Wall -Wextra -Werror
 
-INCLUDES = -I./include
+INCLUDES = -I./includes
 
 $(NAME): $(OBJS)
 	$(CC) $(FLAGS) $(INCLUDES) $(SRCS)
@@ -15,6 +21,12 @@ $(NAME): $(OBJS)
 all : $(NAME)
 
 clean :
+ifeq (exist, $(shell [ -e $(NAME) ] && echo exist))
 	rm $(NAME)
+else
+	@printf "No file\n"
+endif
 
 re : clean all
+
+.PHONY : clean
