Upload data 2021년 9월 25일 토요일 16시 18분 36초 KST

--- a/code/Makefile
+++ b/code/Makefile
@@ -8,10 +8,13 @@ SRCS =  main.c\
 		functions/node_functions.c\
 		functions/itoa.c\
 		functions/check.c\
+		functions/push_swap.c\
+		functions/push_swap_utils.c\
+		functions/node_control.c
 
 CC = gcc
 
-FLAGS = -o $(NAME) -g -ggdb -Wall -Wextra -Werror
+FLAGS = -o $(NAME) -Wall -Wextra -Werror
 
 INCLUDES = -I./includes
 
