Upload data 2021년 10월 12일 화요일 16시 20분 46초 KST

--- a/code/Makefile
+++ b/code/Makefile
@@ -13,6 +13,7 @@ SRCS =  main.c\
 		functions/node_control.c\
 		functions/optimize3.c\
 		functions/optimize3_1.c\
+		functions/optimize3_2.c\
 		functions/optimize5.c\
 		functions/sorted.c\
 		functions/optimize5_1.c\
