Upload data 2021년 10월 23일 토요일 11시 31분 24초 KST

--- a/push_swap/Makefile
+++ b/push_swap/Makefile
@@ -18,7 +18,9 @@ SRCS =  main.c\
 		functions/sorted.c\
 		functions/optimize5_1.c\
 		functions/optimize5_2.c\
-		functions/optimize5_3.c
+		functions/optimize5_3.c\
+		functions/split.c\
+		functions/strlcpy.c
 
 CC = gcc
 
